--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ html, body {
 
 .logo img {
     width: 170px;
-    margin: 11px 0 5px 0;
+    padding: 11px 0 5px 0;
 }
 
 header {
@@ -188,9 +188,6 @@ main {
 
 footer {
     height: 60px;
-    display: flex;
-    text-align: center;
-    bottom: 0;
 }
 
 footer p {
@@ -220,7 +217,7 @@ footer p {
     }
 
     .hamburger-menu {
-        margin-top: 11px;
+        padding-top: 11px;
     }
 
     .hamburger-menu div {
@@ -235,8 +232,18 @@ footer p {
         display: block;
     }
 
+    footer {
+        clear: both;
+        position: relative;
+        height: 150px;
+        text-align: center;
+    }
+
     footer p {
         font-size: 13px;
+        padding-bottom: 10px;
+        bottom: 0;
+        padding-top: 100px ;
     }
 }
 
