--- a/style.css
+++ b/style.css
@@ -243,7 +243,7 @@ footer p {
     footer p {
         font-size: 13px;
         padding-bottom: 10px;
-        padding-top: 27px ;
+        padding-top: 25vw ;
     }
 }
 
