--- a/footer/main.css
+++ b/footer/main.css
@@ -1,15 +1,52 @@
-#page-container {
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
+@import url('https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css');
+@import "navbar.css";
+@import "content.css";
+@import "footer.css";
+@import "responsive.css";
+
+/* Trick */
+body { 
+  display: flex; 
+  flex-direction: column;
+  height: 100vh; 
+  margin: 0;
+}
+
+/* CSS BEGIN */
+
+/* Initialize */
+* {
+  box-sizing: border-box;
+  text-decoration: none;
+  font-family: 'Roboto', sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6, p, body {
+  margin: 0;
+  padding: 0;
+}
+/* ----------- */
+
+.container {
+  width: 80%;
+  min-height: 100%;
+  padding: 0 15px;
+  margin: 0 auto;
   position: relative;
-  min-height: 100vh;
 }
 
-#content-wrap {
-  padding-bottom: 2.5rem;    /* Footer height */
-}
-
-#footer {
-  position: absolute;
-  bottom: 0;
+.background {
   width: 100%;
-  height: 2.5rem;            /* Footer height */
+  height: 100%;
+  background-image: url("waves.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: fixed;
+  z-index: -1;
+}
+
+main {
+  height: 100%;
 }
