--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
-@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css");
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css"); */
 
-* {
+/* * {
     box-sizing: border-box;
     text-decoration: none;
     font-family: 'Roboto', sans-serif;
@@ -12,13 +12,15 @@
 h1, h2, h3, h4, h5, h6, p, body {
     margin: 0;
     padding: 0;
-}
+} */
 
-html, body {
+/* body {
     height: 100%;
-}
+    display: flex;
+    flex-direction: column;
+} */
 
-.background {
+/* .background {
     width: 100%;
     height: 100%;
     background-image: url(waves.svg);
@@ -26,9 +28,9 @@ html, body {
     background-size: cover;
     position: fixed;
     z-index: -1;
-}
+} */
 
-.navbar a{
+/* .navbar a {
     color: black;
 }
 
@@ -44,18 +46,17 @@ html, body {
 header {
     background-color: rgba(0, 0, 0, 0);
     height: 60px;
-}
+} */
 
-main {
+/* main {
     height: 100%;
-    padding-bottom: 2.5rem;    /* Footer height */
-}
+} */
 
-.logo {
+/* .logo {
     float: left;
-}
+} */
 
-.navbar {
+/* .navbar {
     color: white;
     float: right;
     text-decoration: none;
@@ -66,7 +67,7 @@ main {
 
 .navbar a {
     padding-left: 20px;
-}
+} */
 
 /* MOBILE NAVBAR */
 
@@ -128,17 +129,18 @@ main {
     display: none;
   }
 /* ---------- */
-.container {
+/* .container {
     width: 80%;
     min-height: 100%;
     padding: 0 15px;
     margin: 0 auto;
     position: relative;
-}
+} */
 
 .flex-main {
     display: flex;
     padding: 6% 0;
+    flex-direction: row;
 }
 
 .tagline {
@@ -185,16 +187,13 @@ main {
     font-size: 25px;
 }
 
-main footer {
-    text-align: center;
-}
-
 footer {
-    height: 2.5rem;
+    height: 50px;
     display: flex;
-    position: absolute;
-    bottom: 0;
+    /* position: absolute;
+    bottom: 0; */
     text-align: center;
+    margin-top: auto;
     width: 100%;
 }
 
@@ -202,7 +201,7 @@ footer p {
     margin: auto;
 }
 
-@media screen and (min-width: 1500px) {
+/* @media screen and (min-width: 1500px) {
     .tagline h1 {
         font-size: 60px;
     }
@@ -235,13 +234,9 @@ footer p {
     .image-main img, .navbar {
         display: none;
     }
-
-    .flex-main {
-        display: block;
-    }
 }
-
-@media screen and (max-width: 450px) {
+ */
+/* @media screen and (max-width: 450px) {
     .tagline h1 {
         font-size: 35px;
     }
@@ -257,4 +252,4 @@ footer p {
     .tagline h3 {
         font-size: 20px;
     }
-}
+} */
