--- a/footer/responsive.css
+++ b/footer/responsive.css
@@ -15,6 +15,10 @@
 }
 
 @media screen and (max-width: 800px) {
+    body {
+        height: 100%; 
+    }
+
     header .container {
         display: flex;
         justify-content: space-between;
