--- a/footer/responsive.css
+++ b/footer/responsive.css
@@ -41,6 +41,10 @@
         display: none;
     }
 
+    button.start {
+        display: flex;
+    }
+
 }
 
 @media screen and (max-width: 450px) {
