--- a/footer/responsive.css
+++ b/footer/responsive.css
@@ -16,6 +16,10 @@
     footer .desktop {
         display: none;
     }
+    
+    footer p {
+        font-size: 11px;
+    }
 }
 
 @media screen and (max-width: 800px) {
