--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -1,10 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
-@import url('https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css');
 @import "navbar.css";
 @import "content.css";
 @import "footer.css";
 @import "responsive.css";
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
+@import url('https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css');
 
 /* Trick */
 body { 
@@ -27,6 +28,10 @@ h1, h2, h3, h4, h5, h6, p, body {
   margin: 0;
   padding: 0;
 }
+
+.hidden {
+  display: none;
+}
 /* ----------- */
 
 .container {
@@ -40,7 +45,7 @@ h1, h2, h3, h4, h5, h6, p, body {
 .background {
   width: 100%;
   height: 100%;
-  background-image: url("waves.svg");
+  background-image: url("../images/waves.svg");
   background-repeat: no-repeat;
   background-size: cover;
   position: fixed;
