--- a/assets/stylesheets/login.css
+++ b/assets/stylesheets/login.css
@@ -19,7 +19,7 @@ a:hover {
 header {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    text-align: center;
     margin-top: 9vh;
     margin-bottom: 30px;
 }
@@ -39,7 +39,8 @@ header h1 {
 }
 
 form {
-    width: 400px;
+    width: 100%;
+    max-width: 400px;
 }
 
 .field {
