--- a/assets/stylesheets/login.css
+++ b/assets/stylesheets/login.css
@@ -44,7 +44,6 @@ form {
 }
 
 .field {
-    /* margin-bottom: 10px; */
     font-size: 17px;
     position: relative;
 
@@ -63,10 +62,6 @@ form {
     font-size: medium;
 }
 
-.input label {
-    margin-bottom: 10px;
-}
-
 .field.checkbox {
     display: flex;
     flex-direction: row;
@@ -77,23 +72,23 @@ form {
     display: flex;
     justify-content: space-between;
 }
+
 .remember-me input {
-    
     width: 20px;
     height: 20px;
 }
 
-.remember-me label {
-    margin: auto;
+.remember-me label, .forgot-password {
+    margin-top: 3px;
 }
 
 button.start {
-    display: flex;
-    width: 140px;
-    justify-content: space-between;
+    width: 100%;
+    max-width: 400px;
     background-color: rgba(39, 151, 39, 0.7);
     color: white;
     margin-top: 20px;
+    font-size: 20px;
 }
 
 .not-registered {
