--- a/assets/stylesheets/login.css
+++ b/assets/stylesheets/login.css
@@ -20,7 +20,8 @@ header {
     display: flex;
     flex-direction: column;
     text-align: center;
-    margin-top: 9vh;
+    height: 100%;
+    margin-top: 5vh;
     margin-bottom: 30px;
 }
 
@@ -88,13 +89,42 @@ button.start {
     background-color: rgba(39, 151, 39, 0.7);
     color: white;
     margin-top: 20px;
+    margin-bottom: 20px;
     font-size: 20px;
+}
+
+.login-oauth {
+    text-align: center;
+    font-size: 17px;
+}
+
+.login-oauth p {
+    margin-bottom: 10px;
+}
+
+.login-oauth a {
+    font-size: 25px;
+    margin: 20px auto;
+    padding: 0 5px;
+}
+
+.login-oauth .bi-facebook {
+    color: blue;
+}
+
+.login-oauth .bi-google {
+    color: red;
+}
+
+.login-oauth .bi-github {
+    color: black;
 }
 
 .not-registered {
     margin-top: 20px;
     padding-bottom: 10px;
     text-align: center;
+    margin-bottom: 5vh;
 }
 
 @media screen and (max-width: 800px) {
