--- a/assets/stylesheets/login.css
+++ b/assets/stylesheets/login.css
@@ -5,7 +5,7 @@ article .container {
 }
 
 article {
-    margin: 0;
+    margin: auto 0;
 }
 
 a {
@@ -32,7 +32,7 @@ header h1 {
 }
 
 .logo {
-    margin-bottom: 10px;
+    margin-bottom: 25px;
 }
 
 form {
