--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -9,8 +9,6 @@
 
 /* Trick */
 body { 
-  display: flex; 
-  flex-direction: column;
   height: 100vh; 
   margin: 0;
 }
@@ -28,18 +26,14 @@ h1, h2, h3, h4, h5, h6, p, body {
   margin: 0;
   padding: 0;
 }
-
-.hidden {
-  display: none;
-}
 /* ----------- */
 
 .container {
   width: 80%;
   min-height: 100%;
-  padding: 0 15px;
+  display: flex;
+  flex-direction: column;
   margin: 0 auto;
-  position: relative;
 }
 
 .background {
@@ -50,4 +44,44 @@ h1, h2, h3, h4, h5, h6, p, body {
   background-size: cover;
   position: fixed;
   z-index: -1;
+}
+
+
+button {
+  border: 1px solid forestgreen;
+  height: 50px;
+  width: 165px;
+  justify-content: space-between;
+  font-size: 15px;
+  color: #fff;
+  transition-duration: 0.4s;
+  background-color: transparent;
+  cursor: pointer;
+  overflow: hidden;
+  background-color: forestgreen;
+}
+
+button:hover {
+  background-color: rgba(39, 151, 39, 0.7);
+  color: white;
+}
+
+a, i {
+  -webkit-tap-highlight-color: transparent;
+}
+
+.input input {
+  width: 100%;
+  height: 50px;
+  margin-bottom: 20px;
+  border: none;
+  border-bottom: 1px solid black;
+  background: transparent;
+  font-size: medium;
+}
+
+.input input:focus {
+  outline: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
 }
