--- a/assets/stylesheets/login.css
+++ b/assets/stylesheets/login.css
@@ -1,11 +1,9 @@
-article .container {
-    flex-direction: column;
-    align-items: center;
-    margin-top: none;
+.container {
+    margin: auto;
 }
 
 article {
-    margin: auto 0;
+    margin: 23px auto auto auto;
 }
 
 a {
@@ -17,25 +15,23 @@ a:hover {
 }
 
 header {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    height: 100%;
-    margin-top: 1vh;
-    margin-bottom: 30px;
+    justify-content: center;
+    margin-top: auto;
 }
 
-header h1 {
+.login-title {
+    text-align: center;
+    padding: 0 50px;
+    margin-bottom: 20px;
+}
+
+.login-title h1{
     font-size: 40px;
     font-weight: 300;
     margin-bottom: 20px;
 }
 
-.logo {
-    margin-bottom: 25px;
-}
-
-form {
+.form {
     width: 100%;
     max-width: 400px;
 }
@@ -46,21 +42,13 @@ form {
 
 }
 
-.input input {
-    width: 100%;
-    height: 50px;
-    margin-bottom: 20px;
-    border: none;
-    border-bottom: 1px solid black;
-    background: transparent;
-    font-size: medium;
+.field i {
+    float: right;
+    position: relative;
+    margin-top: -55px;
+    cursor: pointer;
+    font-size: 22px;
 }
-
-.input input:focus {
-    outline: none;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-} 
 
 .field.checkbox {
     display: flex;
@@ -82,11 +70,9 @@ form {
     margin-top: 3px;
 }
 
-button.start {
+button.login {
     width: 100%;
     max-width: 400px;
-    background-color: rgba(39, 151, 39, 0.7);
-    color: white;
     margin-top: 20px;
     margin-bottom: 20px;
     font-size: 20px;
@@ -124,10 +110,4 @@ button.start {
     padding-bottom: 10px;
     text-align: center;
     margin-bottom: 1vh;
-}
-
-@media screen and (max-width: 800px) {
-    article .container {
-        display: flex;
-    }
 }
