--- a/assets/stylesheets/footer.css
+++ b/assets/stylesheets/footer.css
@@ -1,11 +1,16 @@
 footer {
     height: 60px;
-    display: flex;
     width: 100%;
     margin-top: auto;
     text-align: center;
+    display: flex;
+    font-weight: 200;
 }
 
-footer p {
-    padding-top: 20px;
+footer div {
+    margin: auto
+}
+
+.mobile {
+    display: none;
 }
