--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -1,7 +1,7 @@
-@import "assets/stylesheets/navbar.css";
-@import "assets/stylesheets/content.css";
-@import "assets/stylesheets/footer.css";
-@import "assets/stylesheets/responsive.css";
+@import "navbar.css";
+@import "content.css";
+@import "footer.css";
+@import "responsive.css";
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
